# duneuro_udg_forward_test

./: CMakeLists.txt  config.h.cmake  dune.module  duneuro_udg_forward_test.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/duneuro_udg_forward_test/: CMakeLists.txt  duneuro_udg_forward_test.hh
src/: CMakeLists.txt  duneuro_udg_forward_test.cc
src/input/: conductivities.txt  dipole.txt  electrodes.txt  udg_configs.ini
